# speed-monitor

./: .env  Cargo.toml  Dockerfile  build.rs  readme.md  speedy.db
.cargo/: config.toml
db/migrations/: init.sql
migrations/: 20221110070720_init.sql
src/: db.rs  err.rs  main.rs  settings.rs  speedy.rs
